feat: add api for counting stats questioner
